--- a/roles/bitnami/templates/apps/redmine/conf/httpd-app.conf
+++ b/roles/bitnami/templates/apps/redmine/conf/httpd-app.conf
@@ -1,4 +1,4 @@
-<Directory "/opt/bitnami/apps/redmine/htdocs/public">
+<Directory "{{ redmine_home }}/public">
     Options -MultiViews
     AllowOverride All
     <IfVersion < 2.3 >
@@ -11,12 +11,10 @@
     
     PassengerEnabled on
     #SetEnv RAILS_RELATIVE_URL_ROOT "/redmine"
-    PassengerAppRoot "/opt/bitnami/apps/redmine/htdocs/"
+    PassengerAppRoot "{{ redmine_home }}/"
     <IfModule pagespeed_module>
         ModPagespeedDisallow "*"
     </IfModule>
-    
-
 </Directory>
 
 #PassengerPreStart http://127.0.0.1:80/redmine
