--- a/roles/bitnami/tasks/main.yml
+++ b/roles/bitnami/tasks/main.yml
@@ -1,40 +1,51 @@
 ---
+- name: check bitnami-redmine version
+  shell: >-
+      test {{ bitnami_home }}/README.txt &&
+      head -n 1 {{ bitnami_home }}/README.txt |
+      sed -re 's/[\t A-Za-z]+//'
+  register: bitnami_version_result
+  failed_when: bitnami_version_result.stdout != '' and
+      (not bitnami_version_result.stdout | match('2\.[5-6]\..+'))
+  changed_when: false
+
 - name: copy installer
-  copy: src={{item}} dest=~/tmp/ mode='u+x'
+  copy: src={{ item }} dest=~/tmp/ mode='u+x'
   with_items:
-    - '/vagrant/downloads/{{bitnami_installer}}'
+    - /vagrant/downloads/{{ bitnami_installer }}
     - bitnami-install
 
 - name: copy install optionfile
-  copy: src='{{bitnami_optionfile}}' dest=~/tmp/
+  copy: src='{{ bitnami_optionfile }}' dest=~/tmp/
 
 - name: install bitnami-redmine
-  command: ~/tmp/bitnami-install '~/tmp/{{bitnami_installer}}' '~/tmp/{{bitnami_optionfile}}' '{{bitnami_password}}'
+  command: ./bitnami-install {{ bitnami_installer }} {{ bitnami_optionfile }} {{ bitnami_password }}
+      chdir=~/tmp
       creates=/opt/bitnami/ctlscript.sh
-  register: install_result
+  register: install_bitnami_result
 
-- name: stop bitnami-readmine apps
+- name: stop bitnami apps
   command: /opt/bitnami/ctlscript.sh stop
-  when: install_result.changed
+  when: install_bitnami_result | changed
 
 - name: copy bitbami-redmine script
-  command: cp -piv /opt/bitnami/ctlscript.sh /etc/init.d/bitnami-redmine
+  command: cp -piv {{ bitnami_home }}/ctlscript.sh /etc/init.d/bitnami-redmine
       creates=/etc/init.d/bitnami-redmine
 
-- name: edit bitbami-redmine script
-  replace: >-
-      dest=/etc/init.d/bitnami-redmine
-      regexp='(#!\/bin\/sh)\n+(# Allow only root execution)'
-      replace='\1\n\n# chkconfig: 2345 80 20\n# description: BitNami Redmine\n\n\2'
+- name: modify bitbami-redmine script
+  replace:
+      dest: /etc/init.d/bitnami-redmine
+      regexp: '(#!\/bin\/sh)\n+(# Allow only root execution)'
+      replace: '\1\n\n# chkconfig: 2345 80 20\n# description: BitNami Redmine\n\n\2'
 
-- name: enable and start bitbami-redmine service
-  service: name=bitnami-redmine enabled=yes state=started
+- name: enable bitbami-redmine service
+  service: name=bitnami-redmine enabled=yes
 
 - name: change redmine access url
-  copy: src={{item.src}} dest={{item.dest}} owner=root group=daemon mode=644
+  template: src={{ item.src }} dest={{ item.dest }} owner=root group=daemon mode=0644
   with_items:
-    - src: 'apps/redmine/conf/httpd-prefix.conf'
-      dest: '/opt/bitnami/apps/redmine/conf/'
-    - src: 'apps/redmine/conf/httpd-app.conf'
-      dest: '/opt/bitnami/apps/redmine/conf/'
+    - src: apps/redmine/conf/httpd-prefix.conf
+      dest: '{{ bitnami_home }}/apps/redmine/conf/'
+    - src: apps/redmine/conf/httpd-app.conf
+      dest: '{{ bitnami_home }}/apps/redmine/conf/'
   notify: restart bitnami-redmine
