--- a/roles/redmine-plugins/tasks/install_plugin.yml
+++ b/roles/redmine-plugins/tasks/install_plugin.yml
@@ -17,4 +17,5 @@
     path: "{{ redmine_home }}/plugins/{{ plugin_dir }}"
     state: directory
     recurse: yes
+    owner: "{{ ansible_env.SUDO_USER | default(ansible_user_id) }}"
     group: daemon
