--- a/roles/bitnami/tasks/mysql_password.yml
+++ b/roles/bitnami/tasks/mysql_password.yml
@@ -5,5 +5,6 @@
   shell: >-
       grep -E '^\s+password\:\s+\w+' {{ redmine_home }}/config/database.yml |
       sed -re 's/\s+password\:\s+//'
+  always_run: yes
   register: bitnami_mysql_password_result
   changed_when: false
