Update subversion role.

--- a/roles/bitnami/tasks/backup_mysql.yml
+++ b/roles/bitnami/tasks/backup_mysql.yml
@@ -3,8 +3,7 @@
 
 - name: backup mysql
   shell: >-
-      mysqldump -ubitnami
-      -p{{ bitnami_mysql_password_result.stdout }} bitnami_redmine
+      mysqldump -ubitnami -p{{ bitnami_mysql_password }} bitnami_redmine
       > ~/tmp/bitnami_redmine.sql
   environment:
     PATH: "{{ bitnami_path }}:{{ ansible_env.PATH }}"
