--- a/roles/bitnami/tasks/mysql_password.yml
+++ b/roles/bitnami/tasks/mysql_password.yml
@@ -8,3 +8,7 @@
   always_run: yes
   register: bitnami_mysql_password_result
   changed_when: false
+
+- name: set bitnami_mysql_password
+  set_fact:
+    bitnami_mysql_password: "{{ bitnami_mysql_password_result.stdout }}"
