--- a/roles/bitnami/tasks/main.yml
+++ b/roles/bitnami/tasks/main.yml
@@ -14,7 +14,7 @@
 - name: copy installer
   copy: src={{ item }} dest=~/tmp/ mode=u+x
   with_items:
-    - "{{ downloads_dir }}/{{ bitnami_installer }}"
+    - "{{ bitnami_downloads_dir }}/{{ bitnami_installer }}"
     - bitnami-install
 
 - name: create installer optionfile
