--- a/roles/subversion/templates/apache2/conf/extra/httpd-vcs.conf
+++ b/roles/subversion/templates/apache2/conf/extra/httpd-vcs.conf
@@ -10,6 +10,7 @@ PerlLoadModule Apache::Authn::Redmine
 
     AuthType Basic
     AuthName Subversion
+    AuthUserFile /dev/null
     Require valid-user
 
     #PerlAccessHandler Apache::Authn::Redmine::access_handler
@@ -19,6 +20,7 @@ PerlLoadModule Apache::Authn::Redmine
     RedmineDSN "DBI:mysql:database=bitnami_redmine;host=localhost;mysql_socket={{ bitnami_home }}/mysql/tmp/mysql.sock"
     RedmineDbUser "bitnami"
     RedmineDbPass "{{ bitnami_mysql_password }}"
+    RedmineCacheCredsMax 50
 </Location>
 
 # Git settings
@@ -29,6 +31,7 @@ ScriptAlias /git/ {{ bitnami_home }}/git/libexec/git-core/git-http-backend/
 <Location /git>
     AuthType Basic
     AuthName Git
+    AuthUserFile /dev/null
     Require valid-user                              
 
     #PerlAccessHandler Apache::Authn::Redmine::access_handler
@@ -38,5 +41,6 @@ ScriptAlias /git/ {{ bitnami_home }}/git/libexec/git-core/git-http-backend/
     RedmineDSN "DBI:mysql:database=bitnami_redmine;host=localhost;mysql_socket={{ bitnami_home }}/mysql/tmp/mysql.sock"
     RedmineDbUser "bitnami"
     RedmineDbPass "{{ bitnami_mysql_password }}"
+    RedmineCacheCredsMax 50
     RedmineGitSmartHttp yes
 </Location>
