--- a/roles/redmine-patches/tasks/main.yml
+++ b/roles/redmine-patches/tasks/main.yml
@@ -16,3 +16,20 @@
     line: '\1 #{issue.assigned_to}"'
     backrefs: yes
   notify: restart bitnami-redmine
+
+- name: modify projects/show
+  replace:
+    dest: "{{ redmine_home }}/app/views/projects/show.html.erb"
+    regexp: '(<div class="splitcontentleft">)\n( +<% if @project.description.present\? %>)'
+    replace: |-
+        \1
+          <% if repo = @project.repositories.select(&:is_default).first %>
+          <%   url = repo.url.sub(/^.*(?=\/(svn|git))/, "http://#{Setting[:host_name]}") %>
+          <div>
+            <%=h repo.scm_name %>:<br>
+            <a href="<%=h url %>"><%=h url %></a>
+          </div>
+          <% end %>
+        \2
+  when: "'subversion-servers' in group_names"
+  notify: restart bitnami-redmine
