--- a/roles/redmine-settings/tasks/main.yml
+++ b/roles/redmine-settings/tasks/main.yml
@@ -16,6 +16,7 @@
       chdir={{ redmine_home }}
   environment:
     PATH: "{{ bitnami_path }}"
+    redmine_title: "{{ redmine_title | default('') }}"
     redmine_host: "{{ inventory_hostname }}"
     redmine_admin_fullname: "{{ bitnami_base_user_name | default('Admin Redmine') }}"
     redmine_admin_username: "{{ bitnami_base_user | default('admin') }}"
