Change sed option.

--- a/roles/bitnami/tasks/main.yml
+++ b/roles/bitnami/tasks/main.yml
@@ -5,7 +5,7 @@
   shell: >-
       test -e {{ bitnami_home }}/README.txt &&
       head -n 1 {{ bitnami_home }}/README.txt |
-      sed -re 's/[\t A-Za-z]+//'
+      sed -E 's/[\t A-Za-z]+//'
   always_run: yes
   register: bitnami_version_result
   failed_when: not bitnami_version_result.stdout | match('(2\.[5-6]\..+)?')
