--- a/roles/bitnami/tasks/mysql_password.yml
+++ b/roles/bitnami/tasks/mysql_password.yml
@@ -4,7 +4,7 @@
 - name: get bitnami mysql password
   shell: >-
       grep -E '^\s+password\:\s+\w+' {{ redmine_home }}/config/database.yml |
-      sed -re 's/\s+password\:\s+//'
+      sed -E 's/\s+password\:\s+//'
   always_run: yes
   register: bitnami_mysql_password_result
   changed_when: false
