--- a/roles/subversion/templates/apache2/conf/extra/httpd-vcs.conf
+++ b/roles/subversion/templates/apache2/conf/extra/httpd-vcs.conf
@@ -1,5 +1,8 @@
 LoadModule perl_module modules/mod_perl.so
 PerlLoadModule Apache::Authn::Redmine
+{% if ldap_enabled %}
+PerlLoadModule Authen::Simple::LDAP
+{% endif %}
 
 # Subversion settings
 <Location /svn>
