Change tmp directory.

--- a/roles/jdk/tasks/main.yml
+++ b/roles/jdk/tasks/main.yml
@@ -2,7 +2,7 @@
 # roles/jdk/tasks/main.yml
 
 - name: copy jdk rpm
-  copy: src={{ downloads_dir }}/{{ jdk_rpm }} dest=/tmp/
+  copy: src={{ downloads_dir }}/{{ jdk_rpm }} dest=/root/tmp/
 
 - name: install jdk
-  yum: name=/tmp/{{ jdk_rpm }} disablerepo=*
+  yum: name=/root/tmp/{{ jdk_rpm }} disablerepo=*
