--- a/roles/public/templates/apache2/conf/extra/httpd-public.conf
+++ b/roles/public/templates/apache2/conf/extra/httpd-public.conf
@@ -9,5 +9,6 @@ Alias /public {{ public_dir }}
     <IfVersion >= 2.3>
         Require all granted
     </IfVersion>
+    IndexIgnore .??*
     PassengerEnabled off
 </Directory>
